--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -28,7 +28,7 @@ jobs:
 
         - name: Build DnsServer
           run: |
-                dotnet publish --self-contained DnsServer/DnsServerApp/DnsServerApp.csproj -c Release
+                dotnet publish -r linux-x64 -p:PublishSingleFile=true --self-contained DnsServer/DnsServerApp/DnsServerApp.csproj -c Release
 
         - name: Upload Artifact
           uses: actions/upload-artifact@v4
