--- a/.github/workflows/work.yml
+++ b/.github/workflows/work.yml
@@ -15,6 +15,10 @@ jobs:
           uses: actions/checkout@v4
           with:
             submodules: 'true'
+        
+        - name: Apply patches
+          run: |
+                cd DnsServer && git apply ../fix-single-file-publish.patch
 
         - name: Setup .NET
           uses: actions/setup-dotnet@v4.2.0
